Activate dark mode by default. Fixed dark mode on setup page.

--- a/frontend/src/styles/app.sass
+++ b/frontend/src/styles/app.sass
@@ -36,10 +36,4 @@ body.body--dark
 		color: white
 	.q-btn
 		color: $secondary
-.q-btn--dark, .q-item--dark, .q-field--dark input
-	color: $secondary !important
-.q-field--dark
-	.q-field__control::before
-		border-color: $secondary !important
-	.q-field__marginal
-		color: $secondary !important
+
